sidebar fix on small screens

--- a/assets/css/partials/_utillities.scss
+++ b/assets/css/partials/_utillities.scss
@@ -36,7 +36,7 @@
   margin-left: auto;
   margin-right: auto;
   float: right;
-  margin-right: 1em;
+  margin-left: 1em;
 
 }
 
